[tool.poetry]
name = "online-slm-calibration"
version = "0.1.0"
description = ""
authors = ["Daniel Cox <danielcox16@hotmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.11"
torch = "~2.3"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
openwfs = { git = "https://github.com/IvoVellekoop/openwfs", rev = "6334c635ce9425ebf0efdcb27b8f0cac6fc7afbe" }
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
