[tool.poetry]
name = "online-slm-calibration"
version = "0.1.0"
description = ""
authors = ["Daniel Cox <danielcox16@hotmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3"
torchvision = ">0.1"
matplotlib = "^3.8.3"
openwfs = "^1.0.0"
tqdm = "^4.66.2"
h5py = "~3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
