[tool.poetry]
name = "online-slm-calibration"
version = "0.2.0"
description = ""
authors = ["Daniel Cox <danielcox16@hotmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.5"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
openwfs = { git = "https://github.com/IvoVellekoop/openwfs", rev = "fe1dea7d99cf980bc48ce99f0801f17d6822197a" }
tqdm = "^4.66.2"
h5py = "~3.11.0"
gitpython = "^3.1.43"
zaber-motion = "^5.2.1"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
